--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,5 +53,8 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
 
+    //animation
+    implementation 'com.airbnb.android:lottie:4.2.2'
+
 
 }
